49
================

12/08/24 Online forms: Creating reserves, set additional field values form the form #1523
08/08/24 Performance: Snapshot unit test db and copy it instead of regenerating 
08/08/24 Performance: When building schema.db, there is no need to install default data
07/08/24 Make sure to clone species setting when cloning online form fields
06/08/24 When merging animals from csv, don't overwrite location if not given #1516
06/08/24 Validate against full HTML documents in online form markup fields
04/08/24 Fix performance bug with onshelter simple search
04/08/24 animal_embed: retrieve full record on click
03/08/24 Do not hide transports with null type
02/08/24 Bad comparison brought boarding animals on shelter tomorrow
02/08/24 Redundant adoptapet mapping for Chinchilla removed
02/08/24 location filters now apply to all animal search keywords eg: hold, etc.
02/08/24 Hide never vacc/no rabies vacc alerts for users with no view vacc permission
01/08/24 Display emblems for mother on edit litters screen #1513
01/08/24 Add ANIMALLITTER csv import field
01/08/24 Update 34803: By->MovedBy so it doesn't break the update path on MySQL
01/08/24 PetFinder: Omit cruelty case flagged animals from Stray/Hold uploads
01/08/24 Streamline advanced find animal query so diet/originalowner joins not needed
01/08/24 Refactor find animal to use the 2 step ID->record trick like shelterview
01/08/24 Use brief records for embedded animal searches
31/07/24 Refactor get_animals_brief to use separate, faster query for performance
30/07/24 AdoptAPet: Add mapping for Blue Lacy -> Blue Lacy/Texas Lacy
29/07/24 Add default transport option
25/07/24 When editing animals, do not filter location list by user loc filter
25/07/24 When stripping personal data, strip coordinator, retain integer for ID fields
25/07/24 Fix error using advanced find animal with location filter 
23/07/24 Handle broken report queries when exporting to CSV/Excel